# pixie-net-frontend

./: .gitignore  .travis.yml  CMakeLists.txt  PixieNetConfig.cpp  PixieNetDefs.h  README.md  acquire.cpp  adcavgpage.html  adcpage.html  app.py  avgadc.c  cgiavgtraces.c  cgiavgtraces.cgi  cgistats.cgi  cgitraces.cgi  config.py  defaults.ini  index.html  lmtablepage.html  makefile  mca.gp  mcapage.html  psahistpage.html  psahistprojpage.html  psasurfacepage.html  requirements.txt  rspage.html  run.py  settings.ini  trc.gp
assets/css/: main.css  now-ui-dashboard.css
assets/html/: adcavgpage.html  adcpage.html  daq.html  gettraces.html  lmtablepage.html  mcapage.html  psahistpage.html  psahistprojpage.html  psasurfacepage.html  rspage.html  webops.html
cmake/modules/: FindLibRDKafka.cmake  FindZeroMQ.cmake
css/: now-ui-dashboard.css
doc/: Pixie_Net_Manual.docx
html/: analysis.html  daq.html  get_traces.html  gettraces.html  lmtablepage.html  mca.html  mcapage.html  psahistpage.html  psahistprojpage.html  rspage.html  run_stats.html  setup.html  webops.html
include/: PixieNetCommon.h  PixieNetConfig.h  PixieNetDefs.h  log.h  nts.h  zhelpers.h
js/custom/: setup.js
other_settings/: settings_Aptec2.ini  settings_CFD_Agilent.ini  settings_HPGe.ini  settings_HighRate.ini  settings_LaBr.ini  settings_LaBrCFD.ini  settings_LaBr_coinc_CFD.ini  settings_NaI.ini  settings_PSA.ini  settings_PTP.ini  settings_PVT.ini  settings_PVTgrp.ini  settings_Scoinc_Na22.ini  settings_StilbeneCFD.ini  settings_aptec.ini  settings_clover.ini  settings_pulser.ini  settings_pulsercoinc.ini
scripts/: pixieNet.C  trc.gp
src/: CMakeLists.txt  acquire.cpp  avgadc.c  cgiavgtraces.c  cgitraces.c  startdaq.c
src/cgi/: CMakeLists.txt  cgiavgtraces.c  cgireadsettings.c  cgistats.c  cgitraces.c  cgiwaveforms.c  cgiwritesettings.cpp
src/pixie-net/: CMakeLists.txt  PixieNetCommon.c  PixieNetConfig.cpp
src/utilities/: CMakeLists.txt  acquire.cpp  avgadc.c  clockprog.c  coincdaq.c  findsettings.c  gettraces.c  log.c  netdaq.c  nts.c  pollcsr.c  progfippi.c  runstats.c  startdaq.c
static/css/: now-ui-dashboard.css  now-ui-dashboard.min.css
static/js/custom/: daq.js  setup.js
static/js/theme/: now-ui-dashboard.js
templates/: adcavgpage.html  analysis.html  base.html  daq.html  get_traces.html  hist_mca.html  hist_trace.html  home.html  index.html  mca.html  psahistpage.html  psahistprojpage.html  psasurfacepage.html  run_stats.html  setup.html
web/pages/: adcavgpage.html  adcpage.html  lmtablepage.html  psahistpage.html  psasurfacepage.html
webops/: acquire.cgi  cgistats.cgi  cgitraces.cgi  cgiwaveforms.cgi  coincdaq.cgi  defaults.ini  findsettings.cgi  gettraces.cgi  mcapage.html  plotly-latest.min.js  progfippi.cgi  psahistpage.html  psahistprojpage.html  psasurfacepage.html  rspage.html  settings.ini  startdaq.cgi  webopsindex.html
