add_executable(gettraces.cgi gettraces.c)
install(TARGETS gettraces.cgi DESTINATION assets/cgi)

add_executable(pollcsr pollcsr.c)
install(TARGETS pollcsr DESTINATION bin)

FOREACH (prog runstats findsettings clockprog)
    add_executable(${prog} ${prog}.c)
    target_link_libraries(${prog} PixieNetCommon_STATIC m)
    install(TARGETS ${prog} DESTINATION bin)
ENDFOREACH (prog)

add_executable(avgadc avgadc.c)
target_link_libraries(avgadc PixieNetConfig_STATIC)
install(TARGETS avgadc DESTINATION bin)

FOREACH (prog progfippi startdaq coincdaq)
    add_executable(${prog} ${prog}.c)
    target_link_libraries(${prog} PixieNetCommon_STATIC PixieNetConfig_STATIC)
    install(TARGETS ${prog} DESTINATION bin)
ENDFOREACH (prog)

add_executable(acquire acquire.cpp)
set(BOOST_ACQ_LIBS boost_date_time boost_chrono boost_atomic boost_program_options boost_system boost_thread rt)
if (USE_KAFKA)
    set(KAFKA_LIBS ssl crypto rdkafka cppkafka)
    add_definitions(-DUSE_KAFKA)
endif (USE_KAFKA)
target_link_libraries(acquire PixieNetCommon_STATIC PixieNetConfig_STATIC m ${BOOST_ACQ_LIBS} ${KAFKA_LIBS})
install(TARGETS acquire DESTINATION bin)